--- a/package.json
+++ b/package.json
@@ -3,12 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@nivo/line": "^0.63.1",
+    "@snowpack/plugin-typescript": "^1.1.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@types/react": "^16.9.55",
+    "@types/react-dom": "^16.9.9",
+    "@types/recharts": "^1.8.16",
+    "chart.js": "^2.9.4",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.0",
+    "recharts": "^1.8.5",
+    "typescript": "^4.0.5",
+    "victory": "^35.3.3",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
